--- a/frontend/src/component/home/home.css
+++ b/frontend/src/component/home/home.css
@@ -18,12 +18,13 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  color: azure;
+  color: white;
   border-radius: 20px;
   margin-bottom: -1%;
 }
 .head{
   margin:2rem;
+  margin-bottom: 0rem;
   margin-left: 30rem;
   display:flex;
   flex-direction: row;
@@ -33,4 +34,11 @@
   display:flex;
   flex-direction: row;
   margin-right: 6rem;
+}
+.usercardinner
+{ height:70%;
+  overflow-y: scroll;
+}
+.usercardinner::-webkit-scrollbar {
+  display: none;
 }
