--- a/frontend/src/component/home/home.css
+++ b/frontend/src/component/home/home.css
@@ -8,37 +8,84 @@
   justify-content: center;
   color: azure;
 }
-.blackbanner{
-  background-color:black;
-  height: 80%;
-  width: 96%;
-  margin: 4rem;
-  
-  flex-direction:column;
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  border-radius: 20px;
-  margin-bottom: -1%;
+
+@media only screen and (max-width: 600px) {
+  .blackbanner{
+    background-color:black;
+    height: 90%;
+    width: 96%;
+    margin: 4rem;
+    
+    flex-direction:column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border-radius: 20px;
+    margin-bottom: -1%;
+  }
+  .head{
+    margin-top:2rem;
+    margin-bottom: 0rem;
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  .headings{
+    font-size: 120%;
+    display:flex;
+    flex-direction: column;
+   
+  }
+  .usercardinner
+  { margin-top: 2rem;
+    height:50%;
+    overflow-y: scroll;
+  }
+  .usercardinner::-webkit-scrollbar {
+    display: none;
+  }
 }
-.head{
-  margin:2rem;
-  margin-bottom: 0rem;
-  margin-left: 30rem;
-  display:flex;
-  flex-direction: row;
-}
-.headings{
-  font-size: 200%;
-  display:flex;
-  flex-direction: row;
-  margin-right: 6rem;
-}
-.usercardinner
+@media only screen and (min-width: 600px) {
+  .blackbanner{
+    background-color:black;
+    height: 80%;
+    width: 96%;
+    margin: 4rem;
+    
+    flex-direction:column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    border-radius: 20px;
+    margin-bottom: -1%;
+  }
+  .head{
+    margin-top:2rem;
+    margin-bottom: 0rem;
+    margin-left: 29rem;
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  .headings{
+    font-size: 200%;
+    display:flex;
+    flex-direction: row;
+    margin-right: 5rem;
+   
+  }
+  .usercardinner
 { height:70%;
   overflow-y: scroll;
 }
 .usercardinner::-webkit-scrollbar {
   display: none;
 }
+
+}
+
+
+
+
